add CSS and Js file

--- a/src/index.pug
+++ b/src/index.pug
@@ -16,3 +16,4 @@ html
       link(rel='stylesheet' href='css/style.css')
       div(data-temp='28' id='temp')
       div#temp(data-temp='28')
+    script(src="js/index.js")
